# idna

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  idna_test.cpp  test_icu.cpp  test_idna.cpp
.github/workflows/: static_analysis.yml  test-macos.yml  test-ubuntu.yml  test-windows.yml
ddt/: DataDrivenTest.hpp
idna/: idna.cpp  idna.h  idna_table.cpp  idna_table.h  iterate_utf16.h  normalize.cpp  normalize.h  punycode.cpp  punycode.h
include/upa/: idna.h
include/upa/idna/: bitmask_operators.hpp  config.h  idna.h  idna_table.h  idna_version.h  iterate_utf.h  nfc.h  normalize.h  punycode.h
punycode_rfc/: punycode_rfc.c  punycode_rfc.h
src/: idna.cpp  idna_table.cpp  idna_table.h  iterate_utf.h  iterate_utf16.h  nfc.cpp  nfc_table.cpp  nfc_table.h  normalize.cpp  punycode.cpp
test/: convert_utf.h  download-tests.bat  download-tests.sh  idna_lib.h  idna_lib_icu.cpp  idna_lib_upa.cpp  test-idna.cpp  test-nfc.cpp  test-utf.cpp
test-data/: punycode-test-mano.txt  punycode-test.txt
test/data/: IdnaTestV2-mano.txt  punycode-test-mano.txt
test/ddt/: DataDrivenTest.hpp
tools/: amalgamate.bat  amalgamate.sh
tools/amalgamate/: config-cpp.json  config-cpp.prologue  config-h.json
unitool/: CMakeLists.txt  download-unicode-data.bat  download-unicode-data.sh  unicode_data_tools.h  unitool-idna.cpp  unitool-nfc.cpp  unitool.cpp
